# phrasis

./: .gitignore  README.md  pyproject.toml
scripts/: main.py
src/phrasis/: __init__.py
src/phrasis/corpora/: __init__.py  registry.py
src/phrasis/corpora/builtin/: sherlock_holmes.py  zen_of_python.py
src/phrasis/detectors/: base.py  gibberish.py
src/phrasis/models/: base.py  char_n_gram.py
